@@ -24,7 +24,8 @@ class EllipsisChecker(BaseChecker):
             "unnecessary-ellipsis",
             "Used when the ellipsis constant is encountered and can be avoided. "
             "A line of code consisting of an ellipsis is unnecessary if "
-            "there is a docstring on the preceding line.",
+            "there is a docstring on the preceding line or if there is a "
+            "statement in the same scope.",
         )
     }
 
@@ -34,13 +35,19 @@ class EllipsisChecker(BaseChecker):
 
         Emits a warning when:
          - A line consisting of an ellipsis is preceded by a docstring.
+         - A statement exists in the same scope as the ellipsis.
+           For example: A function consisting of an ellipsis followed by a
+           return statement on the next line.
         """
         if (
             node.pytype() == "builtins.Ellipsis"
             and isinstance(node.parent, nodes.Expr)
             and (
-                isinstance(node.parent.parent, (nodes.ClassDef, nodes.FunctionDef))
-                and node.parent.parent.doc_node
+                (
+                    isinstance(node.parent.parent, (nodes.ClassDef, nodes.FunctionDef))
+                    and node.parent.parent.doc_node
+                )
+                or len(node.parent.parent.body) > 1
             )
         ):
             self.add_message("unnecessary-ellipsis", node=node)
