@@ -41,7 +41,9 @@ What's New in Pylint 2.13.5?
 ============================
 Release date: TBA
 
-* Narrow the scope of the ``unnecessary-ellipsis`` checker to functions & classes which contain both a docstring and an ellipsis.
+* Narrow the scope of the ``unnecessary-ellipsis`` checker to:
+  * functions & classes which contain both a docstring and an ellipsis.
+  * A body which contains an ellipsis ``nodes.Expr`` node & at least one other statement.
 
 
 
